--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A tool to label pages, blocks and text within images and PDF files">
+
     <title>Mrkr</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +15,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="{{ url_for('static', path='/style.css') }}">
+
+    <script type="module" src="{{ url_for('static', path='/components.js') }}"></script>
 
 </head>
 
