--- a/frontend/static/css/layout.css
+++ b/frontend/static/css/layout.css
@@ -9,7 +9,19 @@ h6 {
     padding: 0;
 }
 
+h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+html {
+    padding: 0;
+    margin: 0;
+}
+
 body {
+    padding: 0;
+    margin: 0;
     display: grid;
     font-family: "Geist", sans-serif;
     font-optical-sizing: auto;
@@ -28,7 +40,8 @@ header.labeling-header {
     grid-template-areas:
         "logo path options";
     grid-template-columns: min-content 1fr min-content;
-    padding: 1rem;
+    padding: .5rem 1rem;
+    border-bottom: 1px solid var(--border-color);
 }
 
 main.labeling-main {
