--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -14,9 +14,13 @@
         href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ url_for('static', path='/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/definitions.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/layout.css') }}">
 
-    <script type="module" src="{{ url_for('static', path='/components.js') }}"></script>
+
+    <script type="module" src="{{ url_for('static', path='/js/base.js') }}"></script>
+    {% block scripts %}
+    {% endblock %}
 
 </head>
 
