working orientation in resizable panes

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -22,7 +22,7 @@
 
 {% block main %}
 <main class="labeling-main">
-    <resizable-panes count="3" orientation="vertical">
+    <resizable-panes orientation="horizontal">
         <div slot="first">Hallo</div>
         <div slot="second">Hallo2</div>
     </resizable-panes>
