fix some bugs in resizable panes

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -22,8 +22,10 @@
 
 {% block main %}
 <main class="labeling-main">
-    <resizable-panes orientation="horizontal">
-        <div slot="first">Hallo</div>
+    <resizable-panes orientation="vertical" minsize="100" startsize="60">
+        <div slot="first">
+            Hallo1
+        </div>
         <div slot="second">Hallo2</div>
     </resizable-panes>
 </main>
