--- a/frontend/static/css/definitions.css
+++ b/frontend/static/css/definitions.css
@@ -1,14 +1,17 @@
 :root {
     --primary-color: #4a90e2;
     --secondary-color: #50e3c2;
-    --background-color: #ffffff;
+    --surface-color: #fdfdfc;
+    --background-color: #f0efeb;
     --text-color: #333333;
-    --border-color: #dcdcdc;
+    --border-color: #e1ded5;
     --hover-color: #e0e0e0;
     --active-color: #c8c8c8;
     --error-color: #ff4d4d;
     --success-color: #4caf50;
     --warning-color: #ff9800;
+
+    --min-layout-width: 1000px;
 
     /* Font sizes */
     --font-size-small: 12px;
@@ -27,7 +30,7 @@
     --styled-link-color: var(--text-color);
     --styled-link-hover-color: var(--primary-color);
 
-    --styled-button-background: var(--background-color);
+    --styled-button-background: var(--surface-color);
     --styled-button-color: var(--text-color);
     --styled-button-border-radius: var(--border-radius-medium);
     --styled-button-border-color: var(--border-color);
@@ -35,4 +38,12 @@
     --styled-button-border-width: 1px;
     --styled-button-font-weight: 600;
     --styled-button-padding: var(--spacing-medium) var(--spacing-large);
+
+    --resizable-pane-handle-color: var(--border-color);
+    --resizable-pane-handle-size: 1px;
+    --resizable-pane-handle-color-hover: var(--primary-color);
+
+    --document-viewer-background: var(--background-color);
+    --document-viewer-spinner-color: var(--primary-color);
+    --document-viewer-spinner-color-top: var(--background-color);
 }
