--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -25,8 +25,9 @@
 <main class="labeling-main">
     <resizable-panes orientation="vertical" minsize="400" startsize="60">
         <div slot="first">
-            <document-viewer metadataurl="{{ url_for('document_metadata', document_id=1) }}"
-                contenturl="{{ url_for('document_content', document_id=1) }}" title="Document">
+            <document-viewer metadata-url="{{ url_for('document_metadata', document_id=1) }}"
+                content-url="{{ url_for('document_content', document_id=1) }}"
+                ocr-url="{{ url_for('document_ocr', document_id=1) }}" title="Document">
             </document-viewer>
         </div>
         <div slot="second">Hallo2</div>
