--- a/frontend/static/css/definitions.css
+++ b/frontend/static/css/definitions.css
@@ -48,6 +48,7 @@
     --document-viewer-spinner-color: var(--primary-color);
     --document-viewer-spinner-color-top: var(--background-color);
     --document-viewer-pulse-color: var(--primary-color);
+    --document-viewer-block-hover-color: var(--primary-color);
 
     --label-viewer-pulse-color: var(--primary-color);
 }
