read ocr from database

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -32,7 +32,7 @@
             </document-viewer>
         </div>
         <div slot="second">
-            <label-viewer ocr-url="{{ url_for('document_ocr', document_id=1) }}"></label-viewer>
+            <label-viewer ocr-url="{{ url_for('ocr', ocr_id=1) }}"></label-viewer>
         </div>
     </resizable-panes>
 </main>
