fix links on labeling page

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -13,9 +13,9 @@
 <header class="labeling-header">
     <h1>mrkr</h1>
     <span>
-        <styled-link href="www.google.com">Projects</styled-link>
+        <styled-link href="https://www.google.com">Projects</styled-link>
         &nbsp;&nbsp;/&nbsp;&nbsp;
-        <styled-link href="www.google.com">{{document.project.name}}</styled-link>
+        <styled-link href="https://www.google.com">{{document.project.name}}</styled-link>
         &nbsp;&nbsp;/&nbsp;&nbsp;
         <b>Document #{{document.id}}</b>
     </span>
