--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -33,7 +33,7 @@
         </div>
         <div slot="second">
             <!-- todo: what if ocr_id null? -->
-            <label-viewer ocr-url="{{ url_for('ocr', ocr_id=1) }}"></label-viewer>
+            <label-viewer ocr-url="{{ url_for('ocr_retrieve', ocr_id=1) }}"></label-viewer>
         </div>
     </resizable-panes>
 </main>
