first implementation of label button

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -6,7 +6,7 @@
 <script type="module" src="{{ url_for('static', path='/js/resizable_panes.js') }}"></script>
 <script type="module" src="{{ url_for('static', path='/js/document_viewer.js') }}"></script>
 <script type="module" src="{{ url_for('static', path='/js/label_viewer.js') }}"></script>
-
+<script type="module" src="{{ url_for('static', path='/js/label_button.js') }}"></script>
 {% endblock %}
 
 {% block header %}
