first refactor into label maker

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -3,11 +3,7 @@
 {% block scripts %}
 <script type="module" src="{{ url_for('static', path='/js/styled_link.js') }}"></script>
 <script type="module" src="{{ url_for('static', path='/js/styled_button.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/resizable_panes.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/document_viewer.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/label_viewer.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/label_button.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/tab_container.js') }}"></script>
+<script type="module" src="{{ url_for('static', path='/js/label_maker.js') }}"></script>
 {% endblock %}
 
 {% block header %}
@@ -26,22 +22,9 @@
 
 {% block main %}
 <main class="labeling-main">
-    <resizable-panes orientation="vertical" minsize="400" startsize="50">
-        <document-viewer slot="first" metadata-url="{{ url_for('document_metadata', document_id=document.id) }}"
-            content-url="{{ url_for('document_content', document_id=document.id) }}" title=" Document">
-        </document-viewer>
-        <tab-container slot="second">
-            <div slot="Document">
-                Hallo
-            </div>
-            <div slot="Page">
-                Hallo2
-            </div>
-            <!-- todo: what if ocr_id null? -->
-            <label-viewer slot="Blocks" ocr-url="{{ url_for('ocr_retrieve', ocr_id=ocr_id) }}">
-
-            </label-viewer>
-        </tab-container>
-    </resizable-panes>
+    <label-maker document-metadata-url="{{ url_for('document_metadata', document_id=document.id) }}"
+        document-content-url="{{ url_for('document_content', document_id=document.id) }}"
+        ocr-url="{{ url_for('ocr_retrieve', ocr_id=ocr_id) }}">
+    </label-maker>
 </main>
 {% endblock %}
