--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -24,7 +24,7 @@
 <main class="labeling-main">
     <label-maker document-metadata-url="{{ url_for('document_metadata', document_id=document.id) }}"
         document-content-url="{{ url_for('document_content', document_id=document.id) }}" show-pages="all-loaded"
-        ocr-url="tododummy">
+        document-labeldata-url="{{ url_for('document_labeldata', document_id=document.id) }}">
     </label-maker>
 </main>
 {% endblock %}
