--- a/frontend/static/css/definitions.css
+++ b/frontend/static/css/definitions.css
@@ -26,6 +26,16 @@
     --border-radius-medium: 4px;
     --border-radius-large: 8px;
 
+    /* Shadows */
+    --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    /* Spinner */
+    --spinner-color: var(--primary-color);
+    --spinner-color-top: var(--background-color);
+    --spinner-size-large: 30px;
+    --spinner-border-large: 4px;
+
+
     --styled-link-color: var(--text-color);
     --styled-link-hover-color: var(--primary-color);
 
@@ -50,12 +60,25 @@
     --tab-container-tabbar-border-color: var(--border-color);
 
     --document-viewer-background: var(--background-color);
-    --document-viewer-spinner-color: var(--primary-color);
-    --document-viewer-spinner-color-top: var(--background-color);
-    --document-viewer-pulse-color: var(--primary-color);
-    --document-viewer-block-hover-color: var(--primary-color);
-    --document-viewer-page-border-color: var(--border-color);
+    --document-viewer-page-background: var(--surface-color);
     --document-viewer-scrollbar-color: var(--scrollbar-thumb) var(--background-color);
+    --document-viewer-page-box-shadow: var(--box-shadow);
+    --document-viewer-highlight-background-color: transparent;
+    --document-viewer-highlight-outline-color: transparent;
+    --document-viewer-highlight-outline-width: 0px;
+    --document-viewer-highlight-focus-outline-color: var(--primary-color);
+    --document-viewer-highlight-focus-outline-width: 2px;
+    --document-viewer-page-focus-outline-color: var(--primary-color);
+    --document-viewer-page-focus-outline-width: 2px;
+
+
+
+    --document-viewer-block-hover-color: var(--primary-color);
+
+
+
+    --document-viewer-pulse-color: var(--primary-color);
+    --document-viewer-page-border-color: var(--border-color);
 
     --label-viewer-background-color: var(--surface-color);
     --label-viewer-pulse-color: var(--primary-color);
@@ -63,4 +86,28 @@
 
     --label-fragment-border-radius: var(--border-radius-medium);
     --label-fragment-border-color: var(--border-color);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        outline: 0px solid transparent;
+    }
+
+    50% {
+        outline: 3px solid var(--document-viewer-pulse-color);
+    }
+
+    100% {
+        outline: 0px solid transparent;
+    }
 }
