add status to document

--- a/frontend/templates/projects.html
+++ b/frontend/templates/projects.html
@@ -26,7 +26,7 @@
             autocapitalize="off" spellcheck="false" aria-label="Filter documents">
     </div>
     <filtered-table content-url="{{ url_for('list_projects') }}"
-        table-config='{"idColumn": "id", "headers": {"id": "ID", "name": "Name", "created": "Created at", "updated": "Updated at", "path": "Path"}, "filterElement": "filter"}'>Hallo</filtered-table>
+        table-config='{"idColumn": "id", "headers": {"id": "ID", "name": "Name", "done": "Done", "open": "Open", "in_review": "In Review", "created": "Created at", "updated": "Updated at", "path": "Path"}, "filterElement": "filter"}'>Hallo</filtered-table>
 </main>
 
 <script>
